--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.4.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
