--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-paystack": "^5.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
@@ -46,7 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
     "autoprefixer": "^10.4.15",
+    "install": "^0.13.0",
+    "npm": "^10.5.1",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
   }
